--- a/src/app/signup/signup.module.css
+++ b/src/app/signup/signup.module.css
@@ -449,7 +449,7 @@
     top: 20px;
     right: 20px;
     background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(5px);
+    /* backdrop-filter: blur(5px); */
     border: 1px solid rgba(255, 255, 255, 0.4);
     border-radius: 50%;
     padding: 10px;
