--- a/src/app/pages/myorders/myOrders.module.css
+++ b/src/app/pages/myorders/myOrders.module.css
@@ -1,16 +1,16 @@
 
 .ordersPage {
-  margin-top: 120px;
+  margin-top: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  min-height: 70vh; 
+  height: 86vh; 
   background-color: #fffefe;
-box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   border-radius: 12px;
   width: 100%;
-  max-width: 1000px; 
+  max-width: 1300px; 
   margin-left: auto;
   margin-right: auto;
 }
@@ -19,16 +19,17 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   padding-bottom: 1.5rem;
   font-weight: 700; 
   color: #333;
+  font-size: 30px;
 }
 
 .ordersScrollArea {
   width: 100%;
-  max-width: 900px;
-  height: 63.8vh; 
+  max-width: 1200px;
+  height: 66vh; 
   overflow-y: auto;
-  padding: 10px 20px;
+  padding: 20px 20px 10px 20px;
   border-radius: 10px;
-  background-color: #fc3333; 
+  background-color: #ff5c5c; 
   border: 1px solid #e0e0e0; 
 }
 
@@ -95,21 +96,31 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.loading, .error, .empty {
-  margin-top: 120px;
+.loading{
+  margin-top: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  min-height: 85vh; 
-  /* height: 1000px; */
-  background-color: #ffffff;
-box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
+  height: 86vh; 
+  background-color: #fffefe;
+  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   border-radius: 12px;
   width: 100%;
-  max-width: 1000px; 
+  max-width: 1300px; 
   margin-left: auto;
   margin-right: auto;
+}
+
+.error, .empty {
+  width: 100%;
+  max-width: 1200px;
+  height: 66vh; 
+  overflow-y: auto;
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: #fc3333; 
+  border: 1px solid #e0e0e0; 
 }
 
 .empty {
@@ -117,5 +128,5 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
     background-color: #fafafa;
     border-radius: 8px;
     border: 1px dashed #ccc;
-    margin-top: 40px;
+    text-align: center;
 }
