--- a/src/app/profile/profile.module.css
+++ b/src/app/profile/profile.module.css
@@ -1,12 +1,12 @@
 .container {
-  max-width: 1400px;
-  margin: 120px auto 10px;
+  max-width: 1290px;
+  margin: 110px auto 10px;
   padding: 2.5rem;
   border-radius: 16px;
   background-color: #ffffff;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08), 0 0 0 1px #e0e0e0;
   font-family: 'Inter', 'Segoe UI', 'Roboto', Arial, sans-serif;
-  height: 84vh; 
+  height: 85vh; 
   overflow: hidden; 
   display: grid;
   grid-template-columns: 350px 1fr;
@@ -274,6 +274,7 @@
   gap: 1.5rem;
   flex-grow: 1;
   padding-top: 25px;
+  text-align: center;
 }
 
 /* Scrollbar Styles */
