--- a/src/app/pages/myorders/myOrders.module.css
+++ b/src/app/pages/myorders/myOrders.module.css
@@ -124,9 +124,13 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
 }
 
 .empty {
-    padding: 40px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 290px;
     background-color: #fafafa;
     border-radius: 8px;
-    border: 1px dashed #ccc;
+    border: 1px solid #ff0000;
     text-align: center;
+    font-weight: 600;
+    font-size: 20px;
+
 }
