--- a/src/app/components/banner/banner.module.css
+++ b/src/app/components/banner/banner.module.css
@@ -6,7 +6,7 @@
     margin-top: 110px;
     height: 60vh;
     max-height: 650px;
-    width: 80%;
+    width: 67%;
     margin-left: auto;
     margin-right: auto;
     /* border: #e53e3e 5px solid; */
@@ -71,6 +71,29 @@
     color: #f7fafc;
 }
 
+@media (max-width: 1440px) {
+    .mainbanner {
+        margin-top: 110px;
+        height: 70vh;
+        width: 90%;
+    }
+
+    .toptext {
+        font-size: 7vw;
+        top: 25%;
+    }
+
+    .midtext {
+        font-size: 11vw;
+        top: 50%;
+    }
+
+    .bottext {
+        font-size: 5vw;
+        top: 75%;
+    }
+}
+
 @media (max-width: 1024px) {
     .mainbanner {
         margin-top: 50px;
@@ -96,9 +119,12 @@
 
 @media (max-width: 768px) {
     .mainbanner {
-        height: 40vh;
+        height: 90vh;
         max-height: 450px;
-        margin-top: 40px;
+        margin-top: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 1200px;
     }
 
     .toptext {
@@ -120,12 +146,13 @@
 @media (max-width: 425px) {
     .mainbanner {
         margin-top: 30px;
-        height: 35vh;
-        border-width: 3px;
+        height: 140vh;
+        width: 1100px;
+        /* border-width: 3px; */
     }
 
     .toptext {
-        font-size: 10vw;
+        font-size: 25vw;
         top: 30%;
     }
 
@@ -135,7 +162,7 @@
     }
 
     .bottext {
-        font-size: 8vw;
+        font-size:15vw;
         top: 70%;
     }
 }
