--- a/src/app/components/footer/footer.module.css
+++ b/src/app/components/footer/footer.module.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
+    align-items: center;
     justify-content: space-between;
     padding: 80px 100px 50px 100px;
     background-color: #111;
@@ -91,7 +92,7 @@
     transform: translateY(-2px);
 }
 
-@media screen and (min-width: 2000px) {
+/* @media screen and (min-width: 2000px) {
     .container {
         padding: 100px 200px 60px 200px;
     }
@@ -174,4 +175,4 @@
     .socialIcons {
         gap: 10px;
     }
-}
+} */
