--- a/src/app/components/searchbar/searchbar.module.css
+++ b/src/app/components/searchbar/searchbar.module.css
@@ -110,6 +110,8 @@
 @media screen and (max-width: 1440px) {
   .searchbar {
     padding: 10px 40px;
+      box-shadow: var(--shadow-subtle);
+    
   }
   .searchform {
     height: 45px;
@@ -134,15 +136,15 @@
 @media screen and (max-width: 768px) {
   .searchbar {
     top: 55px;
-    padding: 8px 15px;
+    padding: 10px 20px;
     border-top: none; 
-    border-bottom: var(--primary-color) 1px solid;
-    box-shadow: none;
+    box-shadow: var(--shadow-subtle);
   }
 
   .searchform {
     flex: 1; 
-    margin: 0 8px;
+    margin: 0 18px;
+    width: 700px;
     height: 40px;
   }
 
@@ -155,39 +157,53 @@
   .recomended {
     padding: 8px; 
     width: auto; 
-    gap: 0;
+    gap: 10;
   }
-  
-  .filterText,
-  .recomendedText {
-    display: none;
+  .filterIcon,
+  .recomendedIcon{
+    font-size: 30px;
   }
+  .filterText, .recomendedText {
+font-size: 20px;
+}
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 425px) {
   .searchbar {
-    padding: 5px 10px;
-    gap: 5px;
-    top: 50px;
-    height: 55px;
-    margin-top: 0;
+    border-radius: 30px;
+    top: 55px;
+    padding: 15px 30px;
+
   }
+  .search{
+    /* margin: 20px; */
+    font-size: 20px;
+  }
+
   .searchform {
-    height: 45px;
-    margin: 0;
+    flex: 1; 
+    /* margin: 0 18px; */
+    width: 700px;
+    height: 40px;
+    padding: 35px;
   }
   .icon {
-    font-size: 20px;
+    font-size: 50px;
     margin-top: 0;
   }
   
   .search {
     font-size: 14px;
   }
+  .filterText,
+  .recomendedText {
+    display: none;
+  }
   
   .filter,
   .recomended {
-    padding: 10px;
-    border-radius: var(--border-radius-base);
+    /* border-radius: 0px; */
+    padding: 20px;
+    border-radius:25px;
   }
 }
