--- a/src/app/pages/myorders/myOrders.module.css
+++ b/src/app/pages/myorders/myOrders.module.css
@@ -112,7 +112,7 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   margin-right: auto;
 }
 
-.error, .empty {
+.error{
   margin-top: 110px;
   width: 100%;
   max-width: 1200px;
@@ -122,11 +122,21 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
   background-color: #fc3333; 
   border: 1px solid #e0e0e0; 
-}
-
+} 
 .empty {
-  margin-top: 110px;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+  width: 100%;
+  max-width: 1200px;
+  height: 66vh; 
+  overflow-y: auto;
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: #fc3333; 
+  border: 1px solid #e0e0e0; 
+}
+.error,
+.empty {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding: 290px;
     background-color: #fafafa;
     border-radius: 8px;
@@ -134,5 +144,4 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
     text-align: center;
     font-weight: 600;
     font-size: 20px;
-
 }
