--- a/src/app/components/searchbar/searchbar.module.css
+++ b/src/app/components/searchbar/searchbar.module.css
@@ -34,10 +34,10 @@
   padding: 0 10px;
 }
 
-.search:focus-within {
+/* .search:focus-within {
   border-color: var(--primary-color);
   box-shadow: 0 0 0 2px rgba(255, 0, 0, 0.2);
-}
+} */
 
 .search {
   flex: 1;
@@ -47,6 +47,7 @@
   outline: none;
   border: none;
   font-size: 16px;
+  border: transparent;
 }
 
 .icon {
@@ -194,7 +195,8 @@ font-size: 20px;
   }
   
   .search {
-    font-size: 20px;
+    font-size: 40px;
+    border: transparent;
   }
   .filterText,
   .recomendedText {
