--- a/src/app/components/homepage/homepage.module.css
+++ b/src/app/components/homepage/homepage.module.css
@@ -5,10 +5,11 @@ padding: 0;
 width: 100%;
 min-height: 100vh;
 background-color: #ffffff;
-font-family: 'Inter', sans-serif;
+font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4);
 border-radius: 10px;
 margin-bottom: 20px;
+
 }
 
 .sidebar {
@@ -365,7 +366,7 @@ margin-bottom: 15px;
 }
 .koreaContainer .textContainer, .fastfoodContainer .textContainer {
 order: 1;
-margin-top: 15px;
+/* margin-top: 15px; */
 }
 .smallContainer {
 /* min-width: 100%; */
@@ -434,10 +435,24 @@ padding: 15px;
 .smallContainer {
 padding: 15px 5px;
 }
+.titleText {
+font-size: 2.1rem;
+font-weight: bold;
+}
 .mainText {
-font-size: 1.6rem;
+font-size: 2.4rem;
+}
+.nameText{
+  font-size: 1.7rem;
+}
+.image{
+  width: 190px;
+height: 190px;
+/* object-fit: contain; */
+margin: 10px 0;
+transition: transform 0.2s;
 }
 .smallText {
-font-size: 0.9rem;
+font-size: 1.6rem;
 }
 }
