--- a/src/app/components/menu/menu.module.css
+++ b/src/app/components/menu/menu.module.css
@@ -1,5 +1,8 @@
-.mainContianer{
+.mainContianer {
     position: fixed;
+    bottom: 20px;        /* distance from bottom */
+    right: 20px;         /* distance from right */
+    
     background-color: red;
     color: white;
     font-size: 60px;
@@ -7,13 +10,11 @@
     border-radius: 30px;
     box-shadow: 0 10px 18px rgba(0, 0, 0, 0.2);
     z-index: 9999;
-    margin-top: 2800px;
-    justify-self: flex-end;
+    
     text-align: end;
-    margin-right: 20px;
-    margin-bottom: 20px;
 }
-.icon{
-   height: 90px;
-   width: 90px;
+
+.icon {
+    height: 90px;
+    width: 90px;
 }
