--- a/src/app/components/Cuisines/cuisine.module.css
+++ b/src/app/components/Cuisines/cuisine.module.css
@@ -40,8 +40,8 @@
 
 .pageWrapper {
     min-height: 100vh;
-    width: 100%;
-    max-width: 1300px;
+    /* width: 100%; */
+    width: 1300px;
     margin: auto;
     padding: 20px 40px 20px;
     box-sizing: border-box;
@@ -202,7 +202,17 @@
     letter-spacing: 0.5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
-
+.orderButton{
+        padding: 8px 8px 8px;
+        margin: 0 20px;
+        background-Color: #E44D26;
+        text-align: center;
+        color: #fff;
+        border: none;
+        border-Radius: 6px;
+        cursor: pointer;
+        font-Weight: 600;
+}
 .buy {
     color: #ffffff;
     background-color: #3A664E;
@@ -650,7 +660,7 @@
     margin-right: 5px;
 }
 
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
     .container {
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
@@ -658,10 +668,10 @@
     .box {
         height: 400px;
     }
-}
+} */
 
 @media (max-width: 768px) {
-    .container {
+    /* .container {
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
     }
@@ -669,7 +679,7 @@
     .pageWrapper {
         padding: 20px;
         margin: 40px auto 20px;
-    }
+    } */
 
     .box {
         height: 380px;
@@ -719,47 +729,75 @@
 }
 
 
-@media (max-width: 500px) {
+@media (max-width: 425px) {
     .pageWrapper {
-        padding: 10px;
-        margin-top: 20px;
+        /* padding: 10px; */
+        margin-top: 200px;
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
     }
 
     .cuisineSelectorBar {
-        flex-wrap: wrap;
+        /* flex-wrap: wrap; */
+        height: 200px;
         gap: 8px;
         margin-bottom: 25px;
     }
 
     .cuisineButton {
+        border-radius: 100px;
         flex-grow: 1;
-        font-size: 13px;
+        font-size: 2rem;
         padding: 8px 12px;
         letter-spacing: 0.5px;
     }
 
     .container {
-        grid-template-columns: 1fr;
+        grid-template-columns: 1fr 1fr;
         padding: 0;
         gap: 15px;
     }
 
     .box {
+        /* align-items: center; */
         max-width: 100%;
-        height: 360px;
+        height: 860px;
     }
 
     .image {
-        height: 50%;
+        height: 70%;
     }
-
+    .pricecontainer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
     .text {
-        font-size: 18px;
+        font-size: 3rem;
     }
 
     .price {
-        font-size: 18px;
+        font-size: 3rem;
     }
+    .orderButton{
+        justify-items: center;
+        padding: 20px 8px;
+        margin: 10px 20px;
+        width: 600px;
+        background-Color: #E44D26;
+        text-align: center;
+        color: #fff;
+        border: none;
+        border-Radius: 6px;
+        cursor: pointer;
+        font-Weight: 600;
+        font-size: 3rem;
+
+        display: block;
+        margin: 20px auto; 
+        text-align: center;
+}
 
     .popup {
         max-width: 95%;
