--- a/src/app/components/Cuisines/cuisine.module.css
+++ b/src/app/components/Cuisines/cuisine.module.css
@@ -735,7 +735,7 @@
         margin-top: 200px;
         margin-left: 0;
         margin-right: 0;
-        width: 100%;
+        /* width: 100%; */
     }
 
     .cuisineSelectorBar {
