--- a/src/app/pages/myorders/myOrders.module.css
+++ b/src/app/pages/myorders/myOrders.module.css
@@ -116,7 +116,7 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   margin-top: 110px;
   width: 100%;
   max-width: 1200px;
-  height: 66vh; 
+  height: 83.7vh; 
   overflow-y: auto;
   padding: 10px 20px;
   border-radius: 10px;
@@ -142,6 +142,8 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
     border-radius: 8px;
     border: 1px solid #ff0000;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     font-weight: 600;
     font-size: 20px;
 }
