--- a/src/app/components/Cuisines/cuisine.module.css
+++ b/src/app/components/Cuisines/cuisine.module.css
@@ -58,7 +58,7 @@
     gap: 12px;
     padding-top: 0px;
     padding-bottom: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 35px;
     border-bottom: 1px solid #E0E0E0;
 }
 
@@ -280,6 +280,26 @@
     cursor: not-allowed;
     opacity: 0.8;
 }
+.loadingCuisine{
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loaderRing {
+  width: 55px;
+  height: 55px;
+  border: 6px solid rgba(0,0,0,0.1);
+  border-top-color: #ff6b2b; /* your theme color */
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
+
 
 .pageInfo {
     font-size: 17px;
