--- a/src/app/pages/myorders/myOrders.module.css
+++ b/src/app/pages/myorders/myOrders.module.css
@@ -97,7 +97,7 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
 }
 
 .loading{
-  margin-top: 110px;
+  margin-top: 87px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -110,6 +110,22 @@ box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
   max-width: 1300px; 
   margin-left: auto;
   margin-right: auto;
+      display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loaderRing {
+  width: 55px;
+  height: 55px;
+  border: 6px solid rgba(0,0,0,0.1);
+  border-top-color: #ff6b2b; /* your theme color */
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to { transform: rotate(360deg); }
 }
 
 .error{
